--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
 								<article>
 									<header>
 										
+										<h2><a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python/blob/main/A%20Nigerian%20Youtuber%20analysis.ipynb">Nigerian Youtuber's Channel analysis using Python<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python/blob/main/A%20Nigerian%20Youtuber%20analysis.ipynb" class="image fit"><img src="images/Fisayo-Fosudo-8.jpg.webp" alt="" /></a>
+									<p>An analysis of a Nigerian Youtuber's Channel (Mr Fisayo Fosudo.He specializes in Smartphones, Apps, Gadgets reviews,Tech discussions and Finance.) metadata using various python libraries. Dataset is obtained via Youtube API.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python/blob/main/A%20Nigerian%20Youtuber%20analysis.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										
 										<h2><a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python/blob/main/Glassdoor%20Reviews.ipynb">Glassdoor review analysis using Python<br />
 										</a></h2>
 									</header>
