--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Bukola The Analyst Portfolio<br />
 						</h1>
-						<p> I am a data analyst well versed in the use of SQL, PowerBI, Tableau, Python and QGIS for Data mining and data collection, Data Cleaning and data management, Data analysis and Data visualization <a href="https://www.linkedin.com/in/oluwabukola-arowolo-95a93a1aa">@BukolatheAnalyst</a>
+						<p> I am a self taught data analyst well versed in the use of SQL, PowerBI, Tableau, Python and QGIS for Data mining and data collection, Data Cleaning and data management, Data analysis and Data visualization <a href="https://www.linkedin.com/in/oluwabukola-arowolo-95a93a1aa">@BukolatheAnalyst</a>
 						</p>
 					<ul class="actions">
 						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -75,6 +75,30 @@
 									<p>An analysis of Mr Fisayo Fosudo YouTube Channel. He is a visual storyteller, finance and technology video producer with over 400,000 subscribers. Video data was obtained via YouTube API and analyzed using Python libraries such as Pandas, NumPy, Seaborn, Matplotlib and NLTK.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/HaddyMiSol/Nigerian-Youtuber-s-Channel-analysis-using-Python" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+
+										<h2><a href="https://github.com/HaddyMiSol/Leetcode-SQL-Answered-Questions-">Leetcode SQL Questions Answered<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/HaddyMiSol/Leetcode-SQL-Answered-Questions-" class="image fit"><img src="images/sql.jfif" alt="" /></a>
+									<p>I answered some leetcode SQL questions with varying SQL methods such as Joins, Select, Subqueries, Sorting and Grouping and many more.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/HaddyMiSol/Leetcode-SQL-Answered-Questions-" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+
+										<h2><a href="https://github.com/HaddyMiSol/Hackerank-SQL-Questions-Solved-">Hackerank SQL Questions Solved<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/HaddyMiSol/Hackerank-SQL-Questions-Solved-" class="image fit"><img src="images/sql.jfif" alt="" /></a>
+									<p>I answered some leetcode SQL questions with varying SQL methods such as Joins, Select, Subqueries, Aggregation, Sorting and Grouping and many more.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/HaddyMiSol/Hackerank-SQL-Questions-Solved-" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -163,6 +187,31 @@
 								<article>
 									<header>
 										
+										<h2><a href="https://github.com/HaddyMiSol/PowerBI-using-Web-API">HIV Daily Report Monitoring Dashboard using PowerBI and leveraging DHIS2 Web-API<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/HaddyMiSol/PowerBI-using-Web-API" class="image fit"><img src="images/hiv2.jpg" alt="" /></a>
+									<p>Data is extracted from DHIS2 via API and loaded into Power BI, where Power Query is used for data cleaning, manipulation, and restructuring. The dashboard provides a range of analyses, including indicator summary report, trend analysis, concurrence analysis between indicators, an accountability matrix, and target achievement monitoring, among other features.
+										Beyond the project's striking visuals, its most compelling feature was the automation of recurring processes. Specifically, it addressed the dynamic recalculations required by period changes (e.g., quarterly shifts) and implemented functions that adapt their behavior based on specific conditions.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/HaddyMiSol/PowerBI-using-Web-API" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+
+										<h2><a href="https://github.com/HaddyMiSol/TB-ACCELERATION-PLAN-PowerBI-Dashboard-using-DHIS2-Connector">TB ACCELERATION PLAN Dashboard using PowerBI and leveraging DHIS2-Connector<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/HaddyMiSol/TB-ACCELERATION-PLAN-PowerBI-Dashboard-using-DHIS2-Connector" class="image fit"><img src="images/TB2.jpg" alt="" /></a>
+									<p>This analyzes tuberculosis data for monitoring and evaluation. Data is extracted from APPR database via connector and loaded into Power BI, where Power Query is used for data cleaning, manipulation, and restructuring. The dashboard provides a range of analyses, including different indicator summary report, trend analysis, among other features.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/HaddyMiSol/TB-ACCELERATION-PLAN-PowerBI-Dashboard-using-DHIS2-Connector" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+
 										<h2><a href="https://github.com/HaddyMiSol/HIV-Indicator-Project-Dashboard-using-PowerBI">HIV Indicator Dashboard using PowerBI<br />
 										</a></h2>
 									</header>
