--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Bukola The Analyst Portfolio<br />
 						</h1>
-						<p> I am a self taught data analyst well versed in the use of SQL, PowerBI, Tableau, Python and QGIS for Data mining and data collection, Data Cleaning and data management, Data analysis and Data visualization <a href="https://www.linkedin.com/in/oluwabukola-arowolo-95a93a1aa">@BukolatheAnalyst</a>
+						<p> I am a data analyst well versed in the use of SQL, PowerBI, Tableau, Python and QGIS for Data mining and data collection, Data Cleaning and data management, Data analysis and Data visualization <a href="https://www.linkedin.com/in/oluwabukola-arowolo-95a93a1aa">@BukolatheAnalyst</a>
 						</p>
 					<ul class="actions">
 						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
