--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
 								<article>
 									<header>
 
+										<h2><a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python">Data-Analysis-with-Python<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python" class="image fit"><img src="images/python.jpg" alt="" /></a>
+									<p>This contains different data analysis script for HIV indicators ranging from client level analysis to Data Quality checks and many more using Python libraries. It also contains visualizations that further aid the understanding of the dataset. Dataset is from Kaggle.com.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/HaddyMiSol/Data-Analysis-with-Python" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+
 										<h2><a href="https://github.com/HaddyMiSol/Student-Mental-Health-Dataset-analytics">Student Mental Health Dataset analytics<br />
 										</a></h2>
 									</header>
